...
        android:id="@+id/compassImageView"
        android:layout_width="106dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/currencyConverterImageView"
        app:layout_constraintEnd_toStartOf="@+id/cookingHelperImageView"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/compass" />

    <ImageView
        android:id="@+id/currencyConverterImageView"
...
